--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 FLASK_APP=src/app.py
-FLASK_ENV=development
+FLASK_DEBUG=True
 
 AVALON_URL=https://av.lib.umd.edu/
 AVALON_NO_RESULTS_LINK=https://av.lib.umd.edu/catalog
